objects/Contact.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHDC_Extension__c</fullName>
        <description>Telephone extension number</description>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHDC_Job_Title__c</fullName>
        <label>Job Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHDC_Medium_Profile_Picture_URL__c</fullName>
        <label>Medium Profile Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FHDC_Medium_Profile_Picture__c</fullName>
        <formula>IF(FHDC_Medium_Profile_Picture_URL__c != Null, IMAGE( FHDC_Medium_Profile_Picture_URL__c , 'Profile Picture' ), 'No Picture')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medium Profile Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHDC_Small_Profile_Picture_URL__c</fullName>
        <label>Small Profile Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FHDC_Small_Profile_Picture__c</fullName>
        <formula>IF(FHDC_Small_Profile_Picture_URL__c != Null, IMAGE( FHDC_Small_Profile_Picture_URL__c , 'Profile Picture' ), 'No Picture')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Small Profile Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>A read only field holding the full name of the contact.</description>
        <formula>TEXT(Salutation) + ' ' +  FirstName + ' ' +  LastName</formula>
        <inlineHelpText>A read only field holding the full name of the contact.</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User record linked to this Contact</description>
        <inlineHelpText>The User record linked to this Contact</inlineHelpText>
        <label>Linked User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ward_Name__c</fullName>
        <description>Ward Name</description>
        <formula>arcusgazetteer__Mailing_Address__r.arcusgazetteer__Ward__c</formula>
        <inlineHelpText>Ward Name</inlineHelpText>
        <label>Ward Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Council_Officers</fullName>
        <columns>FHDC_Small_Profile_Picture__c</columns>
        <columns>FULL_NAME</columns>
        <columns>FHDC_Job_Title__c</columns>
        <columns>FHDC_Department__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>FHDC_Extension__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.arcuscrm__Council_Officer</value>
        </filters>
        <label>All Council Officers</label>
    </listViews>
    <recordTypes>
        <fullName>arcuscrm__Council_Officer</fullName>
        <active>true</active>
        <description>Represents a contact that is an officer of the council and can raise internal cases.</description>
        <label>Council Officer</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__Customer</fullName>
        <active>true</active>
        <description>A contact record for an external customer such as a resident, visitor or business contact</description>
        <label>Customer</label>
    </recordTypes>
    <validationRules>
        <fullName>CRM_fields_are_required_for_contacts</fullName>
        <active>true</active>
        <description>CRM Fields are made required for contacts - phone, email, address and first name. As required via CRM UAT Trello.</description>
        <errorConditionFormula>AND(
$Profile.Name = "FHDC Officer (CRM)",
OR(
ISBLANK(FirstName),
ISBLANK ( Account.Name ),
ISBLANK( Phone ),
( AND (ISBLANK( arcusgazetteer__Mailing_Address__c ), ISBLANK(  OtherAddress  )))))</errorConditionFormula>
        <errorMessage>These fields are required when creating a new contact as an officer - first and last name, associated organisation / account, phone number and either the gazetteer mailing address or other address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FHDC_Prevent_Update_of_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
     ISCHANGED(Full_Name__c), 
      RecordType.Name = 'Council Officer',
    OR($Profile.Name='FHDC Officer (Backoffice)',
       $Profile.Name='FHDC Officer (CRM)'))</errorConditionFormula>
        <errorMessage>You cannot modify Contact Name</errorMessage>
    </validationRules>
</CustomObject>